--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,8 @@ plugins {
 	id 'org.springframework.boot' version '2.3.4.RELEASE'
 	id 'io.spring.dependency-management' version '1.0.10.RELEASE'
 	id 'java'
+	id 'info.solidsoft.pitest' version '1.5.1'
+	id 'jacoco'
 }
 
 group = 'com.pedrohubner'
@@ -19,17 +21,41 @@ repositories {
 }
 
 dependencies {
-	implementation 'javax.validation:validation-api'
-	implementation 'org.springframework.boot:spring-boot-starter-webflux'
-	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb-reactive'
-	compileOnly 'org.projectlombok:lombok'
-	annotationProcessor 'org.projectlombok:lombok'
+	implementation('junit:junit:4.13')
+	implementation('io.springfox:springfox-swagger2:3.0.0')
+	implementation('org.springdoc:springdoc-openapi-webflux-ui:1.4.8')
+	implementation('org.springframework.boot:spring-boot-starter-webflux')
+	implementation('org.springframework.boot:spring-boot-starter-data-mongodb-reactive')
+	compileOnly('org.projectlombok:lombok')
+	annotationProcessor('org.projectlombok:lombok')
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
-	testImplementation 'io.projectreactor:reactor-test'
+	testImplementation('io.projectreactor:reactor-test')
+}
+
+jacocoTestCoverageVerification {
+	violationRules {
+		rule {
+			element('CLASS')
+			limit {
+				minimum = 0.3
+				value = 'COVEREDRATIO'
+				counter = 'LINE'
+			}
+		}
+	}
+}
+
+jacocoTestReport {
+	dependsOn(test)
+	reports {
+		xml.enabled(true)
+		csv.enabled(false)
+	}
 }
 
 test {
 	useJUnitPlatform()
+	finalizedBy(jacocoTestReport)
 }
