Comentando configuração jacoco

--- a/build.gradle
+++ b/build.gradle
@@ -34,18 +34,18 @@ dependencies {
 	testImplementation('io.projectreactor:reactor-test')
 }
 
-jacocoTestCoverageVerification {
-	violationRules {
-		rule {
-			element('CLASS')
-			limit {
-				minimum = 0.3
-				value = 'COVEREDRATIO'
-				counter = 'LINE'
-			}
-		}
-	}
-}
+//jacocoTestCoverageVerification {
+//	violationRules {
+//		rule {
+//			element('CLASS')
+//			limit {
+//				minimum = 0.0
+//				value = 'COVEREDRATIO'
+//				counter = 'LINE'
+//			}
+//		}
+//	}
+//}
 
 jacocoTestReport {
 	dependsOn(test)
